--- a/scss/practice9.scss
+++ b/scss/practice9.scss
@@ -29,6 +29,7 @@ $bg: #f1f1f1;
 .profile {
     box-shadow: 0 4px 10px 0 rgba(0, 0, 0, 0.205), 0 4px 20px 0 rgba(0, 0, 0, 0.219);
     height: 100%;
+    margin-bottom: 20px;
     .avt {
         width: 100%;
         height: 320px;
