--- a/sass/css/practice9.css
+++ b/sass/css/practice9.css
@@ -225,7 +225,8 @@ ul, ol {
 }
 
 * {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans",
+ "Helvetica Neue", sans-serif;
   color: #666666;
 }
 
@@ -257,6 +258,7 @@ ul, ol {
   -webkit-box-shadow: 0 4px 10px 0 rgba(0, 0, 0, 0.205), 0 4px 20px 0 rgba(0, 0, 0, 0.219);
           box-shadow: 0 4px 10px 0 rgba(0, 0, 0, 0.205), 0 4px 20px 0 rgba(0, 0, 0, 0.219);
   height: 100%;
+  margin-bottom: 20px;
 }
 
 .profile .avt {
